# ai-research-template

./: LICENSE  README.md  data.py  inference.py  pyproject.toml  train.py  train_module.py  utils.py
configs/: train_config.yaml
model/: base.py
